meta-intel-axxia: Move to master branch
Now, master branch was zeus as compatile layer series.

meta-ros layer has only master branch compatible with old branches.
Add zeus as compatible branch.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-vcn/README
+++ b/meta-intel-vcn/README
@@ -59,7 +59,7 @@ II. Building meta-intel-vcn
 1.1. Clone the Intel Axxia repository. This provides OpenEmbedded/Yocto
    layers with metadata for building images for the Intel Axxia specific
    reference platforms. See 'Sources' from the main README to select the
-   right repository. Use the 'thud' branch or the tag specified in the
+   right repository. Use the 'master' branch or the tag specified in the
    release notes.
 
    $ cd $YOCTO
@@ -69,9 +69,9 @@ II. Building meta-intel-vcn
    $ git clone https://github.com/axxia/meta-intel-axxia.git
    $ cd meta-intel-axxia
 
-   If using the 'thud' branch.
+   If using the 'master' branch.
 
-   $ git checkout thud
+   $ git checkout master
 
    If using the tag specified in the releases notes.
 
