intel-axxia: Add support for gcc 8.3
Performance test are not going well with gcc9, even with the same
options as gcc8. Also, for performance test, we might want to be
able to build with both and compare.

A0308 - Add the Option to use GCC8 on the dunfell Branch for SNR

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-vcn/README
+++ b/meta-intel-vcn/README
@@ -272,6 +272,11 @@ NOTE: No preferred version should be set for linux-local provider.
     * 'cd ase/simics'
     * tar czf simics-5.0.195.tgz simics-5.0.195
 
+2.3.10. Add gcc8 support for the previous version of gcc instead of
+      the default which is gcc9.
+
+      DISTRO_FEATURES_append = " gcc8"
+    
 2.3.10. Set the serial console depending on the bios you are using.
       Default is ttyS4, but some old bios use ttyS5 or ttyS6.
 
