--- a/meta-intel-vcn/README
+++ b/meta-intel-vcn/README
@@ -277,17 +277,22 @@ NOTE: No preferred version should be set for linux-local provider.
     * 'cd ase/simics'
     * tar czf simics-<simics-version>.tgz simics-<simics-version>
 
-2.3.10. Select the version of python3 to use: 3.9 (default) or 3.6.
+2.3.10. Choose a different GCC version to use: 9.% (gcc9 feature) or 11.%
+    (gcc11 feature) via distro features. Default version is 10.%.
+
+    DISTRO_FEATURES_append = " gcc9"
+    
+2.3.11. Select the version of python3 to use: 3.9 (default) or 3.6.
 
     PYTHON_VERSION = "3.6"
     
-2.3.11. Depending on your host processor, set these two options that
+2.3.12. Depending on your host processor, set these two options that
       control how much parallelism BitBake should use (optional):
 
     BB_NUMBER_THREADS = "12"
     PARALLEL_MAKE = "-j 12"
 
-2.3.12. Other optional settings for saving disk space and build time:
+2.3.13. Other optional settings for saving disk space and build time:
    
     DL_DIR = "/(some-shared-location)/downloads"
     SSTATE_DIR = "/(some-shared-location)/sstate-cache
