--- a/meta-intel-vcn/README
+++ b/meta-intel-vcn/README
@@ -418,6 +418,16 @@ Here are three ways to boot Victoria Canyon.
   * "install" - This will install to another attached device.
   * "Reboot into Firmware interface" - Go back to the EFI menu.
 
-5.3. PXE BOOT
+5.3. NETWORK BOOT
 
-TBD
+Because many servers and services are available, they are not
+described here.  The files needed to boot are available.
+
+  * Multiple kernel images are available.  The kernel version selected
+    in local.conf will be available as
+    <TMPDIR>/deploy/images/axxiax86-64/bzImage with the other versions
+    available as <TMPDIR>/deploy/images/axxiax86-64/kernel-*/bzImage.
+    Available versions of the kernel are described above.
+  * Multiple root file systems are also available.  The contents are
+    described above (see axxia-image-small, axxia-image-sim, and
+    axxia-image-vcn).  Various formats are available.
