--- a/meta-intel-vcn/README
+++ b/meta-intel-vcn/README
@@ -281,27 +281,33 @@ NOTE: No preferred version should be set for linux-local provider.
 
     DISTRO_FEATURES_append = " gcc8"
 
-2.3.11. Select the version of python3 to use: 3.8 (default) or 3.6.
+2.3.11. Enable readonly-root filesystem support. This feature causes the
+      root filesystem to be mounted read-only with writable data located
+      on a RAM disk (tmpfs).
+
+    DISTRO_FEATURES_append = " readonly-rootfs"
+
+2.3.12. Select the version of python3 to use: 3.8 (default) or 3.6.
 
     PYTHON_VERSION = "3.6"
     
-2.3.12. Set the serial console depending on the bios you are using.
+2.3.13. Set the serial console depending on the bios you are using.
       Default is ttyS4, but some old bios use ttyS5 or ttyS6.
 
     SNR_SERIAL_CONSOLE = "ttyS5"
     
-2.3.13. Set the console to use in the .iso image if different than the
+2.3.14. Set the console to use in the .iso image if different than the
       following default value:
 
     GRUB_SERIAL = "console=ttyS4,115200"
     
-2.3.14. Depending on your host processor, set these two options that
+2.3.15. Depending on your host processor, set these two options that
       control how much parallelism BitBake should use (optional):
 
     BB_NUMBER_THREADS = "12"
     PARALLEL_MAKE = "-j 12"
 
-2.3.15. Other optional settings for saving disk space and build time:
+2.3.16. Other optional settings for saving disk space and build time:
    
     DL_DIR = "/(some-shared-location)/downloads"
     SSTATE_DIR = "/(some-shared-location)/sstate-cache
